--- a/index.html
+++ b/index.html
@@ -14,5 +14,25 @@
  		</nav>
  	</div>
  </header>
+   <div id="main-container" class="container">
+   	<section> 
+   		<h1> About me </h1>
+   		<img src= "https://assets-cdn.github.com/images/modules/open_graph/github-mark.png" 
+   		<p> </p>
+   	</section>
+
+   	<section>
+   		<div>
+   			<h2> </h2>
+   			<a> </a>
+   		</div>
+   	</section>
+
+   	<footer>
+   		<div>
+   			Copyright &copy; 2018 Janellys Fraga
+   		</div>
+
+   		</footer>
 </body>
 </html>
