--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About Janellys Fraga</title>
+   <meta charset="utf-8" />
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <title> About Janellys Fraga </title>
+	<meta name="viewport" content="width=device=width, initial-scale=1">
+   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+   <script src="main.js"></script>
 </head>
 <body>
- <header>
- 	<div class
- 		<a>Janellys Fraga</a>
+   <header id="masthead">
+ 	<div class="container">
+ 		<a href="index.html">Janellys Fraga</a>
  		<nav>
- 			<a>About</a>
- 			<a>Portfolio</a>
- 			<a>Contact</a>
+ 			<a href="index.html">About</a>
+ 			<a href="Portfolio.html">Portfolio</a>
+ 			<a href="Contact.html">Contact</a>
  		</nav>
  	</div>
  </header>
    <div id="main-container" class="container">
-   	<section> 
+   	<section class="main-secion">
    		<h1> About me </h1>
-   		<img src= "https://assets-cdn.github.com/images/modules/open_graph/github-mark.png" 
-   		<p> </p>
+   		<img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsiITzaNp80qZVesl2Tp76YQcdRoSz194Hj6DE5UzUBDgzSoOSKA" class="auth-image">
+   		<p>blah blah blah blah </p>
+         <p>blah blah blah blah </p>
    	</section>
 
-   	<section>
-   		<div>
-   			<h2> </h2>
-   			<a> </a>
+   	<section class="sidebar">
+   		<div id="connect">
+   			<h2>Connect with Me </h2>
+            <link> https://github.com/janellysfraga </link>
+   			<a></a>
    		</div>
-   	</section>
+      </section>
+   	</div>
 
    	<footer>
-   		<div>
+   		<div class="container">
    			Copyright &copy; 2018 Janellys Fraga
    		</div>
 
