made more progress

--- a/contact.html
+++ b/contact.html
@@ -17,3 +17,40 @@
  			<a href="Portfolio.html">Portfolio</a>
  			<a href="Contact.html">Contact</a>
  		</nav>
+ 	</div>
+ </header>
+
+ <div id="main-container" class="container">
+ 	<section class="main-section"> 
+    <h1>Contact</h1>
+
+    <fors id="contact-fors">
+     
+     <ul>
+      	<li>
+      		<label for="name">Name</label>
+      		<input type="text" id="name" placeholder="Enter name here" required="required">
+      	</li>
+      		<li>
+      		<label for="email">Email</label>
+      		<input type="text" id="name" placeholder="Enter name here" required="required">
+      	</li>
+      		<li>
+      		<label for="message">Message</label>
+      		<textarea id="message" name="message" required="required"> 
+      	</li>
+
+     </ul>
+    </fors>
+
+ 	</section>
+ </div>
+
+ 	<footer>
+   		<div class="container">
+   			Copyright &copy; 2018 Janellys Fraga
+   		</div>
+
+   		</footer>
+
+ 	
