--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
    		<p>blah blah blah blah </p>
          <p>blah blah blah blah </p>
    	</section>
+   </div>
 
    	<section class="sidebar">
    		<div id="connect">
