--- a/portfolio.html
+++ b/portfolio.html
@@ -17,3 +17,35 @@
  			<a href="Portfolio.html">Portfolio</a>
  			<a href="Contact.html">Contact</a>
  		</nav>
+</div>
+</header> 
+
+<div id="main-container" class="container">
+     <section class="main-section">
+     	<h1>Portfolio</h1>
+     	<div class="work">
+     		<img src="fav star.jpg" >
+     </div>
+     </section>
+ </div>
+
+ 	<section class="sidebar">
+   	<div id="connect">
+   			<h2>Connect with Me </h2>
+            <link> https://github.com/janellysfraga </link>
+   			<a href=" https://github.com/janellysfraga"></a>
+   		</div>
+      </section>
+   	</div>
+
+   		<footer>
+   		<div class="container">
+   			Copyright &copy; 2018 Janellys Fraga
+   		</div>
+
+   		</footer>
+
+
+
+   
+   		
