portfolio,contact, and more were fixed

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
  <div id="main-container" class="container">
  	<section class="main-section"> 
     <h1>Contact</h1>
-
+    
     <fors id="contact-fors">
      
      <ul>
@@ -33,24 +33,21 @@
       	</li>
       		<li>
       		<label for="email">Email</label>
-      		<input type="text" id="name" placeholder="Enter name here" required="required">
+      		<input type="text" id="name" placeholder="Enter email here" required="required">
       	</li>
       		<li>
       		<label for="message">Message</label>
-      		<textarea id="message" name="message" required="required"> 
+      		<textarea id="message" name="message" required="required"> </textarea>
       	</li>
-
      </ul>
     </fors>
-
  	</section>
  </div>
-
+</body>
  	<footer>
    		<div class="container">
    			Copyright &copy; 2018 Janellys Fraga
    		</div>
-
-   		</footer>
+   	</footer>
 
  	
