--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
    	<section class="main-secion">
    		<h1> About me </h1>
    		<img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsiITzaNp80qZVesl2Tp76YQcdRoSz194Hj6DE5UzUBDgzSoOSKA" class="auth-image">
-   		<p>blah blah blah blah </p>
-         <p>blah blah blah blah </p>
+   		<p>I am Jnanellys Fraga. I am hispanic american and I speak 3 different languages. These languages include: French, English, and Spanish.</p>
+         <p> I enjoy many activities indoors as i do not like to go outside much. I live in Miami, so it does get really hot at times.</p>
    	</section>
    </div>
 
@@ -32,7 +32,9 @@
    		<div id="connect">
    			<h2>Connect with Me </h2>
             <link> https://github.com/janellysfraga </link>
-   			<a></a>
+   			<a href="https://github.com/janellysfraga" target="_blank">
+            <img src="github cat.svg" class="social">
+         </a>
    		</div>
       </section>
    	</div>
