--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,10 @@
      <section class="main-section">
      	<h1>Portfolio</h1>
      	<div class="work">
-     		<img src="fav star.jpg" >
+     		<a href="https://janellysfraga.github.io/FavoriteThingsWebsiteP3/" target="_blank"> 
+     		<img src="fav star.jpg"/> 
+     	</a>
+     	<h3>Favorite Things Website</h3>
      </div>
      </section>
  </div>
@@ -33,7 +36,9 @@
    	<div id="connect">
    			<h2>Connect with Me </h2>
             <link> https://github.com/janellysfraga </link>
-   			<a href=" https://github.com/janellysfraga"></a>
+   			<a href="https://github.com/janellysfraga" target="_blank">
+            <img src="github cat.svg" class="social">
+         </a>
    		</div>
       </section>
    	</div>
