--- a/contact.html
+++ b/contact.html
@@ -1,53 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <meta charset="utf-8" />
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <title> About Janellys Fraga </title>
-	<meta name="viewport" content="width=device=width, initial-scale=1">
-   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-   <script src="main.js"></script>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Contact | Janellys Fraga</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
-   <header id="masthead">
- 	<div class="container">
- 		<a href="index.html">Janellys Fraga</a>
- 		<nav>
- 			<a href="index.html">About</a>
- 			<a href="Portfolio.html">Portfolio</a>
- 			<a href="Contact.html">Contact</a>
- 		</nav>
- 	</div>
- </header>
 
- <div id="main-container" class="container">
- 	<section class="main-section"> 
-    <h1>Contact</h1>
-    
-    <fors id="contact-fors">
-     
-     <ul>
-      	<li>
-      		<label for="name">Name</label>
-      		<input type="text" id="name" placeholder="Enter name here" required="required">
-      	</li>
-      		<li>
-      		<label for="email">Email</label>
-      		<input type="text" id="name" placeholder="Enter email here" required="required">
-      	</li>
-      		<li>
-      		<label for="message">Message</label>
-      		<textarea id="message" name="message" required="required"> </textarea>
-      	</li>
-     </ul>
-    </fors>
- 	</section>
- </div>
+    <header id="masthead">
+        <div class="container">
+            <a href="index.html"> Jannellys Fraga</a>
+            <nav>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </div>
+    </header>
+
+    <div id="main-container" class="container">
+        <section class="main-section">
+            <h1>Contact</h1>
+
+            <form>
+                <ul>
+                    <li>
+                        <label for="name">Name</label>
+                        <input type="text" id="name" placeholder="Enter name here" required="required">
+                    </li>
+                    <li>
+                        <label for="email">Email</label>
+                        <input type="text" id="email" placeholder="Enter email here" required="required">
+                    </li>
+                    <li>
+                        <label for="message">Message</label>
+                        <textarea id="mesasge" name="message" required="required"></textarea>
+                    </li>
+                </ul>
+                <input type="submit">
+            </form>
+
+        </section>
+
+        <section class="sidebar">
+                <div>
+                    <h2>Connect With Me</h2>
+                    <a href="https://github.com/Janellysfraga" target="_blank">
+                        <img src="github-mark.png" class="social">
+                    </a>
+                </div>
+        </section>       
+
+    </div>
+
+    <footer>
+            <div class="container">
+                Copyright &copy; 2018 Janellys Fraga
+            </div>
+    </footer>
+
+
 </body>
- 	<footer>
-   		<div class="container">
-   			Copyright &copy; 2018 Janellys Fraga
-   		</div>
-   	</footer>
-
- 	
