--- a/index.html
+++ b/index.html
@@ -1,49 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <meta charset="utf-8" />
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <title> About Janellys Fraga </title>
-	<meta name="viewport" content="width=device=width, initial-scale=1">
-   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-   <script src="main.js"></script>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>About | Janellys Fraga</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
-   <header id="masthead">
- 	<div class="container">
- 		<a href="index.html">Janellys Fraga</a>
- 		<nav>
- 			<a href="index.html">About</a>
- 			<a href="Portfolio.html">Portfolio</a>
- 			<a href="Contact.html">Contact</a>
- 		</nav>
- 	</div>
- </header>
-   <div id="main-container" class="container">
-   	<section class="main-secion">
-   		<h1> About me </h1>
-   		<img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsiITzaNp80qZVesl2Tp76YQcdRoSz194Hj6DE5UzUBDgzSoOSKA" class="auth-image">
-   		<p>I am Jnanellys Fraga. I am hispanic american and I speak 3 different languages. These languages include: French, English, and Spanish.</p>
-         <p> I enjoy many activities indoors as i do not like to go outside much. I live in Miami, so it does get really hot at times.</p>
-   	</section>
-   </div>
 
-   	<section class="sidebar">
-   		<div id="connect">
-   			<h2>Connect with Me </h2>
-            <link> https://github.com/janellysfraga </link>
-   			<a href="https://github.com/janellysfraga" target="_blank">
-            <img src="github cat.svg" class="social">
-         </a>
-   		</div>
-      </section>
-   	</div>
+    <header id="masthead">
+        <div class="container">
+            <a href="index.html">Janellys Fraga</a>
+            <nav>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </div>
+    </header>
 
-   	<footer>
-   		<div class="container">
-   			Copyright &copy; 2018 Janellys Fraga
-   		</div>
+    <div id="main-container" class="container">
+        <section class="main-section">
+            <h1>About Me</h1>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsiITzaNp80qZVesl2Tp76YQcdRoSz194Hj6DE5UzUBDgzSoOSKA" class="auth-image">
+            <p>I am Janellys Fraga. I am hispanic american and I speak 3 different languages. These languages include: French, English, and Spanish.</p>
+            <p>I enjoy many activities indoors as I do not like to go outside much. I live in Miami, so it does get really hot at times. My time usually consists of studying, working out, eating and watching youtube.</p>
+        </section>
 
-   		</footer>
+        <section class="sidebar">
+            <div>
+                <h2>Connect With Me</h2>
+                <a href="https://github.com/janellysfraga" target="_blank">
+                    <img src="github-mark.png" class="social">
+                </a>
+            </div>
+        </section>        
+    </div>
+
+    <footer>
+        <div class="container">
+            Copyright &copy; 2018 Janellys Fraga 
+        </div>
+    </footer>
+
 </body>
 </html>
