--- a/portfolio.html
+++ b/portfolio.html
@@ -1,56 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <meta charset="utf-8" />
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <title> About Janellys Fraga </title>
-	<meta name="viewport" content="width=device=width, initial-scale=1">
-   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-   <script src="main.js"></script>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Portfolio | Janellys Fraga</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
-   <header id="masthead">
- 	<div class="container">
- 		<a href="index.html">Janellys Fraga</a>
- 		<nav>
- 			<a href="index.html">About</a>
- 			<a href="Portfolio.html">Portfolio</a>
- 			<a href="Contact.html">Contact</a>
- 		</nav>
-</div>
-</header> 
 
-<div id="main-container" class="container">
-     <section class="main-section">
-     	<h1>Portfolio</h1>
-     	<div class="work">
-     		<a href="https://janellysfraga.github.io/FavoriteThingsWebsiteP3/" target="_blank"> 
-     		<img src="fav star.jpg"/> 
-     	</a>
-     	<h3>Favorite Things Website</h3>
-     </div>
-     </section>
- </div>
+    <header id="masthead">
+        <div class="container">
+            <a href="index.html">Janellys Fraga</a>
+            <nav>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </div>
+    </header>
 
- 	<section class="sidebar">
-   	<div id="connect">
-   			<h2>Connect with Me </h2>
-            <link> https://github.com/janellysfraga </link>
-   			<a href="https://github.com/janellysfraga" target="_blank">
-            <img src="github cat.svg" class="social">
-         </a>
-   		</div>
-      </section>
-   	</div>
+    <div id="main-container" class="container">
+        <section class="main-section">
+            <h1>Portfolio</h1>
+            <div class="work">
+                <a href="https://janellysfraga.github.io/FavoriteThingsWebsiteP3/" target="_blank">
+                <img src="fav star.jpg"/>               
+                <h3>Favorite Things Website</h3>
+                </a>
+            </div>
+        </section>
 
-   		<footer>
-   		<div class="container">
-   			Copyright &copy; 2018 Janellys Fraga
-   		</div>
+        <section class="sidebar">
+            <div>
+                <h2>Connect With Me</h2>
+                <a href="https://github.com/janellysfraga" target="_blank">
+                    <img src="github-mark.png" class="social">
+                </a>
+            </div>
+        </section>        
+    </div>
 
-   		</footer>
+    <footer>
+        <div class="container">
+            Copyright &copy; 2018 Janellys Fraga
+        </div>
+    </footer>
 
-
-
-   
-   		
+</body>
+</html>
