--- a/portfolio.html
+++ b/portfolio.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-    <header id="masthead">
+   <header id="masthead">
         <div class="container">
-            <a href="index.html">Janellys Fraga</a>
+            <a href="index.html" id="nameart"> Janellys Fraga</a>
             <nav>
                 <a href="index.html">About</a>
                 <a href="portfolio.html">Portfolio</a>
