--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header id="masthead">
         <div class="container">
-            <a href="index.html">Janellys Fraga</a>
+            <a href="index.html" id="nameart"> Janellys Fraga</a>
             <nav>
                 <a href="index.html">About</a>
                 <a href="portfolio.html">Portfolio</a>
